# Protocol-Simulator

./: .gitignore  Cargo.toml
configs/: example_composite.json  validator_basic.json
crates/simulation/: Cargo.toml
crates/simulation/configs/: example_simple.json  validator_basic.json
crates/simulation/src/: bootstrap.rs  lib.rs  output.rs
crates/simulation/src/config/: mod.rs  validator.rs
crates/simulation/src/domain/: mod.rs
crates/simulation/src/domain/validator/: agent.rs  mod.rs
crates/simulation/src/domain/validator/metrics/: distribution.rs  global.rs  listeners.rs  mod.rs  survival.rs
crates/simulation/src/engine/: engine.rs
crates/simulation/src/metrics/: mod.rs  recorder.rs  traits.rs
crates/wasm-bindings/: Cargo.toml
crates/wasm-bindings/src/: lib.rs
src/: bootstrap.rs  main.rs  output.rs
src/config/: root.rs  validator.rs
src/domain/: mod.rs  traits.rs
src/domain/token/: agent.rs  domain.rs  metric.rs  state.rs
src/domain/validator/: agent.rs  domain.rs  metrics.rs  mod.rs  state.rs
src/domain/validator/metrics/: distribution.rs  global.rs  listeners.rs  mod.rs  sampling.rs  survival.rs
src/engine/: engine.rs
src/metrics/: mod.rs  recorder.rs  traits.rs
web/: .gitignore  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Button.tsx  ResultCard.tsx  StatusBadge.tsx  index.ts
web/src/components/charts/: AreaChart.tsx  BarChart.tsx  ChartContainer.tsx  LineChart.tsx  (+2 more)
web/src/hooks/: useWasm.ts
web/src/styles/: theme.ts
web/src/types/: simulation.ts
(+7 files in other folders)
