[workspace]
resolver = "2"
members = [
    "crates/simulation",
    "crates/wasm-bindings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies across all crates
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Simulation-specific
rand = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
