[package]
name = "simulation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "simulation"
path = "src/bin/cli.rs"

[lib]
name = "simulation"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
log = "0.4.29"
