[package]
name = "wasm-bindings"
version.workspace = true
edition.workspace = true

[lib]
# cdylib = C Dynamic Library (creates .wasm file)
crate-type = ["cdylib", "rlib"]

[dependencies]
simulation = { path = "../simulation" }
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
# Optimize for small WASM bundle size
opt-level = "z"  # Optimize for size
lto = true       # Link-time optimization
